--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@ryangjchandler/alpine-clipboard": "^2.3.0",
+        "alpinejs": "^3.13.7",
+        "shiki": "^1.2.0"
     }
 }
