--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "drewm/mailchimp-api": "^2.5",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
-        "spatie/laravel-markdown": "^2.5"
+        "spatie/laravel-markdown": "^2.5",
+        "spatie/laravel-newsletter": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
