--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@ryangjchandler/alpine-clipboard": "^2.3.0",
         "alpinejs": "^3.13.7",
+        "particles.js": "^2.0.0",
         "shiki": "^1.2.0"
     }
 }
