--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
         "php": "^8.2",
         "drewm/mailchimp-api": "^2.5",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-tags-plugin": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
         "spatie/laravel-markdown": "^2.5",
-        "spatie/laravel-newsletter": "^5.1"
+        "spatie/laravel-newsletter": "^5.1",
+        "spatie/laravel-tags": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
