--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "ralphjsmit/laravel-filament-seo": "^1.3",
+        "ralphjsmit/laravel-seo": "^1.5",
         "spatie/laravel-markdown": "^2.5",
         "spatie/laravel-newsletter": "^5.1",
         "spatie/laravel-tags": "^4.6"
