--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "drewm/mailchimp-api": "^2.5",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-tags-plugin": "^3.2",
+        "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
@@ -18,7 +19,8 @@
         "ralphjsmit/laravel-seo": "^1.5",
         "spatie/laravel-markdown": "^2.5",
         "spatie/laravel-newsletter": "^5.1",
-        "spatie/laravel-tags": "^4.6"
+        "spatie/laravel-tags": "^4.6",
+        "spatie/laravel-translatable": "^6.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
