--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "codezero/laravel-localized-routes": "^4.0",
         "drewm/mailchimp-api": "^2.5",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-tags-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.0",
@@ -19,6 +20,7 @@
         "ralphjsmit/laravel-filament-seo": "^1.3",
         "ralphjsmit/laravel-seo": "^1.5",
         "spatie/laravel-markdown": "^2.5",
+        "spatie/laravel-medialibrary": "^11.0.0",
         "spatie/laravel-newsletter": "^5.1",
         "spatie/laravel-tags": "^4.6",
         "spatie/laravel-translatable": "^6.6"
